# fp-homework

./: .editorconfig  .stylish-haskell.yaml  stack.yaml
hw0/: hw0.cabal
hw0/src/: Task1.hs  Task2.hs  Task3.hs  Task4.hs  Task5.hs  Task6.hs  Task7.hs
hw1/: hw1.cabal
hw1/src/: AATree.hs  Block1.hs  Block2.hs  Block3.hs  Block4.hs  Block5.hs  City.hs  Day.hs  Days.hs  Lib.hs  Nat.hs  NonEmpty.hs  NonEmptys.hs  Tree.hs  Trees.hs
hw1/tests/: Block1Tests.hs
hw2/: hw2.cabal
hw2/src/: Block1.hs  Block2.hs  Block21.hs  Block22.hs  Block2Remainder.hs  Block3.hs  BonusBlock.hs  FishToJoin.hs  FishToMonad.hs  MonadToFish.hs  MonadToJoin.hs  Monads.hs  Monads2.hs  Task1.hs  Utils.hs
hw2/test/: Block1Spec.hs  Block2Spec.hs  Block3Spec.hs  BonusBlockSpec.hs  Spec.hs  Task1Spec.hs  Task3Spec.hs
hw3/: hw3.cabal
hw3/app/: Main.hs
hw3/bash-scripts/: test-prog  test.sh
hw3/src/: Interpreter.hs  Lib.hs  Parser.hs  ProgramStructure.hs
hw4/: hw4.cabal
hw4/app/: Main.hs
hw4/bench/: Main.hs  Task1Bench.hs  Task2Bench.hs
hw4/src/: Task1.hs  Task2.hs  Task3.hs  Task4.hs  Task5.hs
hw4/test/: Spec.hs  Task2Spec.hs  Task3Spec.hs  Task4Spec.hs
hw5/: hw5.cabal
hw5/src/: Task1.hs  Task2.hs  Task5.hs  Task6.hs  Task7.hs  Task8.hs
hw5/test/: Spec.hs  Task1Spec.hs  Task5Spec.hs  Task7Spec.hs  Task8Spec.hs
