name:                hw2
version:             0.1.0.0
synopsis:            Synopsis for task 2
description:         Task 2 for FP ITMO course

homepage:            https://github.com//fp-homework/tree/master/hw2#readme
license:             MIT
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2019 Author name here

category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 8.0.1

library
  hs-source-dirs:      src
  exposed-modules:
        Block1
      , Block3
  ghc-options:         -Wall
  build-depends:       base >= 4.9 && < 5,
                       mtl
  default-language:    Haskell2010

test-suite doctests
  type:             exitcode-stdio-1.0
  main-is: Spec.hs
  build-depends:
      base
    , hspec
    , QuickCheck        >= 2.12 && < 2.13
    , hw2

  other-modules:
        Task1Spec
      , Task3Spec

  ghc-options:      -Wall -threaded
  hs-source-dirs:   test
  default-language: Haskell2010
